--- a/updated_bzone_index.html
+++ b/updated_bzone_index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ro">
 <head>
@@ -34,7 +35,7 @@
 
     <section id="regulament">
       <h2>Regulament</h2>
-      <p>Aici poți adăuga regulamentul complet al comunității tale. Fii clar, concis și respectuos față de membrii noi.</p>
+      <p>Aici poți adăuga regulamentul complet al comunității tale.</p>
     </section>
   </div>
 </body>
